@@ -1,3 +1,8 @@
+Wed Jul 10 22:03:27 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (bary_2comp): Don't use bary_plus_one.
+	  (bary_add_one): Replaced by the implementation of bary_plus_one.
+
 Wed Jul 10 20:48:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* bignum.c (sizeof_bdigit_dbl): check sizeof(BDIGIT_DBL).
